<resources>
    <string name="app_name">gastoViagem</string>
    <string name="distancia">Distancia</string>
    <string name="distância">distância</string>
    <string name="total_de_quilômetros">Total de Quilômetros</string>
    <string name="preço">Preço</string>
    <string name="preço_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">KM por Litro</string>
    <string name="gasto_total">Gasto Total</string>
    <string name="gasto_total_sera_de">gasto total sera de</string>
    <string name="valor_total">R$ 0</string>
    <string name="fill_all_filds">Preencha todos os campos</string>
    <string name="calcular">calcular</string>
</resources>